--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "react": "^18.1.0",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.8.0",
     "react-scripts": "5.0.1",
+    "swiper": "^8.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
